statum-macros/tests/ui/invalid_presentation_unknown_key.stderr
error: Error: unknown `#[present(...)]` key `title` on transition `Flow<Draft>::submit`.
       Found: `title = "Submit"`
       Expected: `label = "..."`, `description = "..."`, or `metadata = Expr`
       Fix: replace that key or remove it.
  --> tests/ui/invalid_presentation_unknown_key.rs:24:15
   |
24 |     #[present(title = "Submit")]
   |               ^^^^^
